2018-03-08  Keith Miller  <keith_miller@apple.com>

        Use asm instead of __asm__ in WTFBreakpointTrap so MSVC builds
        https://bugs.webkit.org/show_bug.cgi?id=183465

        Reviewed by Michael Saboff.

        * wtf/Assertions.h:

2018-03-07  Filip Pizlo  <fpizlo@apple.com>

        Make it possible to randomize register allocation
        https://bugs.webkit.org/show_bug.cgi?id=183416

        Reviewed by Keith Miller.

        * wtf/MathExtras.h:
        (WTF::shuffleVector):

2018-03-08  Yusuke Suzuki  <utatane.tea@gmail.com>

        [Win] Use __debugbreak for WTFBreakpointTrap
        https://bugs.webkit.org/show_bug.cgi?id=183450

        Reviewed by Mark Lam.

        This patch adds WTFBreakpointTrap() implementation for MSVC by using
        __debugbreak. It fixes build failure in Windows due to the use of
        WTFBreakpointTrap().

        * wtf/Assertions.h:

2018-03-08  Zan Dobersek  <zdobersek@igalia.com>

        [GLib] RunLoop::wakeUp(): use a zero value instead of the monotonic time
        https://bugs.webkit.org/show_bug.cgi?id=183447

        Reviewed by Carlos Garcia Campos.

        * wtf/glib/RunLoopGLib.cpp:
        (WTF::RunLoop::wakeUp): Micro-optimize the wake-up schedule by using
        a zero value as the GSource ready time, instead of retrieving and using
        the current monotonic time.

2018-03-08  Tim Horton  <timothy_horton@apple.com>

        Don't have Celestial in minimal simulator configuration
        https://bugs.webkit.org/show_bug.cgi?id=183432
        <rdar://problem/38252985>

        Reviewed by Dan Bernstein.

        * wtf/Platform.h:

2018-03-06  Yusuke Suzuki  <utatane.tea@gmail.com>

        [WTF] Set canInitializeWithMemset = true if T is an integral type
        https://bugs.webkit.org/show_bug.cgi?id=183357

        Reviewed by Darin Adler.

        This patch set `canInitializeWithMemset = true` if T is an integral type.